# Ma_chlas

./: .gitignore  LICENSE.txt  Ma_chlas.pro  linuxdeploy-plugin-appimage-x86_64.AppImage  main.cpp  make_linux.sh  make_macos.sh  make_windows.bat  make_windows.ps1  qml.qrc  readme.md
.github/workflows/: cmake.yml  make.yml
atalierou/: Atalierou.desktop  Atalierou.pro  Atalierou.sh  Atalierou_br.ts  Atalierou_en.ts  Atalierou_fr.ts  Atalierou_fr_FR.ts  CMakeLists.txt  Makefile  desktop.entry  icon.icns  mac.pri  main.cpp  make_dist.sh  make_dist_linux.sh  make_dist_linux2.sh  make_dist_windows.bat  make_linux.sh  qml.qrc  qtquickcontrols2.conf  readme.md  update_language.sh
atalierou/dataModels/: ActivityCategories.qml  FileFormatChecker.qml  GlobalConfigModel.qml  Session.qml  qmldir
atalierou/external_data/: My_classroom_boy.json  My_classroom_girl.json  config_activity_count_syllabes.json  config_activity_find_syllabes.json  config_activity_phonems.json  external_config.json  test.csv
atalierou/qml/: Test.qml  qmldir
atalierou/qml/components/: AppScrollView.qml  AudioHelp.qml  Avatar.qml  Card.qml  ComboBoxEditableItem.qml  GaugeImage.qml  SimpleTreeView.qml  TreeView.qml
atalierou/qml/config/: ConfigDetails.qml  config.qml
atalierou/qml/config/maker/: MakerCorpus.qml  MakerCorpusEdit.qml  MakerInitSession.qml  MakerSession.qml  qmldir
atalierou/qml/dataModels/: ActivityCategories.qml  FileFormatChecker.qml  GlobalConfigModel.qml  Session.qml  qmldir
atalierou/qml/games/puzzle/: PuzzleSessionData.qml  SlidingPuzzle.qml  SlidingPuzzleModel.qml
atalierou/qml/main/: App.qml  AppWindow.qml  Navigator.qml  ScoreScreen.qml  ScreenTemplate.qml  Screens.qml  home.qml
atalierou/qml/phono/: CountSyllabes.qml  CountSyllabesModel.qml  FindIntruder.qml  FindIntruderModel.qml  FindSoundOrSyllabe.qml  FindSoundOrSyllabeModel.qml  PhonoSessionData.qml
atalierou/qml/selection/: ActivitiesGroupChoice.qml  ActivityChoice.qml  ActivityChoiceLevel.qml  Children.qml
atalierou/qml/ui/: ActivitiesGroupChoice.qml  ActivityChoice.qml  ActivityChoiceLevel.qml  AppWindow.qml  Children.qml  ConfigDetails.qml  GaugeImage.qml  Navigator.qml  ScoreScreen.qml  ScreenTemplate.qml  Screens.qml  home.qml  qmldir
atalierou/qml/ui/phono/: CountSyllabes.qml  CountSyllabesModel.qml  FindSoundOrSyllabe.qml  FindSoundOrSyllabeModel.qml
atalierou/res/: global_config.json
atalierou/res/data/: config.json  config_activity_count_syllabes.json  config_activity_find_syllabes.json  config_activity_phonems.json
atalierou/res/data/br/: config_activity_count_syllabes.json  config_activity_find_intruder.json  config_activity_find_sound.json  corpus.json
atalierou/res/data/fr/: config_activity_count_syllabes.json  config_activity_find_intruder.json  config_activity_find_sound.json  config_activity_find_syllabes.json  config_activity_phonems.json  corpus.json
atalierou/res/data/models/: phonem.json
atalierou/res/data/puzzles/: config_activity_sliding_puzzle.json
atalierou/res/shaders/: colorize.frag  colorize.vert  colorizeVert.qsb  generate_qsb.sh  maskSourceFrag.qsb
atalierou/scripts/: loadJson.js
atalierou/src/: ActivityCategoryScoreNode.h  GenericConfigWithPath.cpp  GenericConfigWithPath.h  TreeNode.cpp  TreeNode.h  VERSION.h  cfileio.cpp  cfileio.h  configwithpath.cpp  configwithpath.h  fileio.cpp  genericconfigwithpath.cpp  globalConfigData.cpp  globalConfigData.h  user.cpp  user.h
atalierou/src/corpus/: CorpusItem.h  corpus.cpp  corpus.h
atalierou/src/puzzle/: slidingpuzzle.cpp  slidingpuzzle.h
atalierou/ui/: ActivitiesGroupChoice.qml  ActivityChoice.qml  ActivityChoiceLevel.qml  AppWindow.qml  AudioHelp.qml  Children.qml  ScoreScreen.qml  Screens.qml  config.qml
atalierou/ui/phono/: CountSyllabes.qml  CountSyllabes2.qml  FindSoundOrSyllabe.qml
audio/: partie breton.aup
audio/partie breton_data/eff/d1e/: eff1e01e.au  eff1e035.au  eff1e04a.au  eff1e0c5.au  eff1e122.au  eff1e12f.au  eff1e1c8.au  eff1e2d3.au  eff1e348.au  eff1e3ac.au  eff1e3d0.au  eff1e46e.au  eff1e4ab.au  eff1e4ef.au  eff1e4f1.au  eff1e578.au  eff1e604.au  eff1e6c4.au  eff1e701.au  eff1e785.au  eff1e921.au  eff1ea1c.au  eff1ea5d.au  eff1eaea.au  eff1eb70.au  eff1ec19.au  eff1ec28.au  eff1ec35.au  eff1ec5b.au  eff1ec60.au  eff1ed45.au  eff1eddd.au  eff1ee03.au  eff1ee1e.au  eff1ee2f.au  eff1ee39.au  eff1eed9.au  eff1ef10.au  eff1efd2.au
audio/partie breton_data/eff/d1f/: eff1f079.au  eff1f0d5.au  eff1f6fe.au  eff1f7c6.au  eff1fd10.au  eff1fe30.au
dataModels/: GlobalConfigModel.qml  Session.qml  qmldir
external_data/: My_classroom_boy.json  config_activity_count_syllabes.json  config_activity_find_syllabes.json  external_config.json
res/data/: config.json  config_activity_count_syllabes.json  config_activity_find_syllabes.json
res/shaders/: colorizeFrag.qsb  maskSource.frag
scripts/: loadJson.js
src/: ActivityLevelScoreNode.cpp  ActivityLevelScoreNode.h  ActivityScoreNode.h  ActivityTypeScoreNode.h  ITreeNode.h  TreeModel.cpp  TreeModel.h  TreeNode.cpp  TreeNode.h  activitycategoryscorenode.h  fileio.cpp  fileio.h  globalConfigData.cpp  globalConfigData.h  user.cpp  user.h
ui/: ActivityChoice.qml  ActivityChoiceLevel.qml  ActivityChoiceLevel2.qml  AppWindow.qml  Avatar.qml  Card.qml  Children.qml  ColoredImage.qml  ConfigDetails.qml  Games.qml  Navigator.qml  ScoreScreen.qml  Screen1.qml  Screens.qml  Splash.qml  TreeItem.qml  config.qml  home.qml  main.qml  tmp.qml
ui/phono/: CountSyllabes.qml  CountSyllabes2.qml  Phonem.qml
