cmake_minimum_required(VERSION 3.16)
project(Atalierou VERSION 1.0 LANGUAGES C CXX)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

find_package(QT NAMES Qt5 Qt6 REQUIRED COMPONENTS Core)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Gui Multimedia Quick QuickControls2 Svg Widgets)

qt_standard_project_setup()

qt_add_executable(Atalierou WIN32 MACOSX_BUNDLE
    main.cpp
    src/ActivityCategoryScoreNode.h
    src/ActivityLevelScoreNode.cpp src/ActivityLevelScoreNode.h
    src/ActivityScoreNode.h
    src/ActivityTypeScoreNode.h
    src/ITreeNode.h
    src/TreeModel.cpp src/TreeModel.h
    src/TreeNode.cpp src/TreeNode.h
    src/VERSION.h
    src/configwithpath.cpp src/configwithpath.h
    src/corpus/corpus.cpp src/corpus/corpus.h
    src/corpus/corpusitem.h
    src/fileio.cpp src/fileio.h
    src/genericconfigwithpath.cpp src/genericconfigwithpath.h
    src/globalConfigData.cpp src/globalConfigData.h
    src/puzzle/slidingpuzzle.cpp src/puzzle/slidingpuzzle.h
    src/user.cpp src/user.h
)
target_link_libraries(Atalierou PRIVATE
    Qt::Core
    Qt::Gui
    Qt::Multimedia
    Qt::Quick
    Qt::QuickControls2
    Qt::Svg
    Qt::Widgets
)


# Resources:
set(qml_resource_files
    "qml/Test.qml"
    "qml/components/AppScrollView.qml"
    "qml/components/AudioHelp.qml"
    "qml/components/Avatar.qml"
    "qml/components/Card.qml"
    "qml/components/ColoredImage.qml"
    "qml/components/ComboBoxEditableItem.qml"
    "qml/components/GaugeImage.qml"
    "qml/components/TreeItem.qml"
    "qml/config/ConfigDetails.qml"
    "qml/config/config.qml"
    "qml/config/maker/MakerCorpus.qml"
    "qml/config/maker/MakerCorpusEdit.qml"
    "qml/config/maker/MakerInitSession.qml"
    "qml/config/maker/MakerSession.qml"
    "qml/config/maker/qmldir"
    "qml/dataModels/ActivityCategories.qml"
    "qml/dataModels/FileFormatChecker.qml"
    "qml/dataModels/GlobalConfigModel.qml"
    "qml/dataModels/Session.qml"
    "qml/dataModels/qmldir"
    "qml/games/puzzle/PuzzleSessionData.qml"
    "qml/games/puzzle/SlidingPuzzle.qml"
    "qml/games/puzzle/SlidingPuzzleModel.qml"
    "qml/main/App.qml"
    "qml/main/AppWindow.qml"
    "qml/main/Navigator.qml"
    "qml/main/ScoreScreen.qml"
    "qml/main/ScreenTemplate.qml"
    "qml/main/Screens.qml"
    "qml/main/home.qml"
    "qml/main/main.qml"
    "qml/main/qmldir"
    "qml/phono/CountSyllabes.qml"
    "qml/phono/CountSyllabesModel.qml"
    "qml/phono/FindIntruder.qml"
    "qml/phono/FindIntruderModel.qml"
    "qml/phono/FindSoundOrSyllabe.qml"
    "qml/phono/FindSoundOrSyllabeModel.qml"
    "qml/phono/PhonoSessionData.qml"
    "qml/scripts/loadJson.js"
    "qml/selection/ActivitiesGroupChoice.qml"
    "qml/selection/ActivityChoice.qml"
    "qml/selection/ActivityChoiceLevel.qml"
    "qml/selection/Children.qml"
    "qtquickcontrols2.conf"
    "res/data/audio/help_phono_findSyllabes_a.mp3"
    "res/data/audio/help_phono_findSyllabes_i.mp3"
    "res/data/audio/help_phono_findSyllabes_o.mp3"
    "res/data/audio/help_phono_findSyllabes_o_ouvert.mp3"
    "res/data/audio/help_phono_findSyllabes_oi.mp3"
    "res/data/audio/help_phono_findSyllabes_ou.mp3"
    "res/data/br/audio/abeille.mp3"
    "res/data/br/audio/allumettes.mp3"
    "res/data/br/audio/arbre.mp3"
    "res/data/br/audio/ballon.mp3"
    "res/data/br/audio/bateau.mp3"
    "res/data/br/audio/bus.mp3"
    "res/data/br/audio/camion.mp3"
    "res/data/br/audio/canard.mp3"
    "res/data/br/audio/chaise.mp3"
    "res/data/br/audio/chat.mp3"
    "res/data/br/audio/cheval.mp3"
    "res/data/br/audio/chien.mp3"
    "res/data/br/audio/ciseaux.mp3"
    "res/data/br/audio/clef.mp3"
    "res/data/br/audio/cochon.mp3"
    "res/data/br/audio/coquillage.mp3"
    "res/data/br/audio/corbeau.mp3"
    "res/data/br/audio/couteau.mp3"
    "res/data/br/audio/crayon.mp3"
    "res/data/br/audio/dragon.mp3"
    "res/data/br/audio/escargot.mp3"
    "res/data/br/audio/fantome.mp3"
    "res/data/br/audio/feuille.mp3"
    "res/data/br/audio/fusee.mp3"
    "res/data/br/audio/grenouille.mp3"
    "res/data/br/audio/help_phono_countSyllabes.mp3"
    "res/data/br/audio/help_phono_findSyllabe.mp3"
    "res/data/br/audio/help_phono_start_same_sound.mp3"
    "res/data/br/audio/help_phono_start_same_syllabe.mp3"
    "res/data/br/audio/herisson.mp3"
    "res/data/br/audio/lapin.mp3"
    "res/data/br/audio/licorne.mp3"
    "res/data/br/audio/lit.mp3"
    "res/data/br/audio/maison.mp3"
    "res/data/br/audio/marteau.mp3"
    "res/data/br/audio/moto.mp3"
    "res/data/br/audio/mouche.mp3"
    "res/data/br/audio/moulin.mp3"
    "res/data/br/audio/mouton.mp3"
    "res/data/br/audio/pirate.mp3"
    "res/data/br/audio/poisson.mp3"
    "res/data/br/audio/poubelle.mp3"
    "res/data/br/audio/poule.mp3"
    "res/data/br/audio/poussin.mp3"
    "res/data/br/audio/reine.mp3"
    "res/data/br/audio/roi.mp3"
    "res/data/br/audio/seau.mp3"
    "res/data/br/audio/serpent.mp3"
    "res/data/br/audio/sorciere.mp3"
    "res/data/br/audio/souris.mp3"
    "res/data/br/audio/table.mp3"
    "res/data/br/audio/thermometre.mp3"
    "res/data/br/audio/tobogan.mp3"
    "res/data/br/audio/toilettes.mp3"
    "res/data/br/audio/vache.mp3"
    "res/data/br/audio/velo.mp3"
    "res/data/br/audio/voiture.mp3"
    "res/data/br/config_activity_count_syllabes.json"
    "res/data/br/config_activity_find_intruder.json"
    "res/data/br/config_activity_find_sound.json"
    "res/data/config.json"
    "res/data/fr/audio/abeille.mp3"
    "res/data/fr/audio/allumette.mp3"
    "res/data/fr/audio/arbre.mp3"
    "res/data/fr/audio/avion.mp3"
    "res/data/fr/audio/ballon.mp3"
    "res/data/fr/audio/bateau.mp3"
    "res/data/fr/audio/bus.mp3"
    "res/data/fr/audio/camion.mp3"
    "res/data/fr/audio/canard.mp3"
    "res/data/fr/audio/chaise.mp3"
    "res/data/fr/audio/chat.mp3"
    "res/data/fr/audio/cheval.mp3"
    "res/data/fr/audio/chien.mp3"
    "res/data/fr/audio/ciseaux.mp3"
    "res/data/fr/audio/clef.mp3"
    "res/data/fr/audio/cochon.mp3"
    "res/data/fr/audio/coquillage.mp3"
    "res/data/fr/audio/corbeau.mp3"
    "res/data/fr/audio/couteau.mp3"
    "res/data/fr/audio/crayon.mp3"
    "res/data/fr/audio/dragon.mp3"
    "res/data/fr/audio/escargot.mp3"
    "res/data/fr/audio/fantome.mp3"
    "res/data/fr/audio/feuille.mp3"
    "res/data/fr/audio/fusee.mp3"
    "res/data/fr/audio/grenouille.mp3"
    "res/data/fr/audio/help_phono_countSyllabes.mp3"
    "res/data/fr/audio/help_phono_findSyllabe.mp3"
    "res/data/fr/audio/help_phono_start_same_sound.mp3"
    "res/data/fr/audio/help_phono_start_same_syllabe.mp3"
    "res/data/fr/audio/herisson.mp3"
    "res/data/fr/audio/lapin.mp3"
    "res/data/fr/audio/licorne.mp3"
    "res/data/fr/audio/lit.mp3"
    "res/data/fr/audio/maison.mp3"
    "res/data/fr/audio/marteau.mp3"
    "res/data/fr/audio/moto.mp3"
    "res/data/fr/audio/mouche.mp3"
    "res/data/fr/audio/moulin.mp3"
    "res/data/fr/audio/mouton.mp3"
    "res/data/fr/audio/pirate.mp3"
    "res/data/fr/audio/poisson.mp3"
    "res/data/fr/audio/poubelle.mp3"
    "res/data/fr/audio/poule.mp3"
    "res/data/fr/audio/poussin.mp3"
    "res/data/fr/audio/reine.mp3"
    "res/data/fr/audio/roi.mp3"
    "res/data/fr/audio/seau.mp3"
    "res/data/fr/audio/serpent.mp3"
    "res/data/fr/audio/sorciere.mp3"
    "res/data/fr/audio/souris.mp3"
    "res/data/fr/audio/table.mp3"
    "res/data/fr/audio/thermometre.mp3"
    "res/data/fr/audio/tobogan.mp3"
    "res/data/fr/audio/toilettes.mp3"
    "res/data/fr/audio/train.mp3"
    "res/data/fr/audio/vache.mp3"
    "res/data/fr/audio/velo.mp3"
    "res/data/fr/audio/voiture.mp3"
    "res/data/fr/config_activity_count_syllabes.json"
    "res/data/fr/config_activity_find_intruder.json"
    "res/data/fr/config_activity_find_sound.json"
    "res/data/images/abeille.png"
    "res/data/images/allumettes.png"
    "res/data/images/arbre.png"
    "res/data/images/avion.png"
    "res/data/images/ballon.png"
    "res/data/images/bateau.png"
    "res/data/images/bus.png"
    "res/data/images/camion.png"
    "res/data/images/canard.png"
    "res/data/images/chaise.png"
    "res/data/images/chat.png"
    "res/data/images/cheval.png"
    "res/data/images/chien.png"
    "res/data/images/ciseaux.png"
    "res/data/images/class/classroom.svg"
    "res/data/images/clef.png"
    "res/data/images/cochon.png"
    "res/data/images/coquillage.png"
    "res/data/images/corbeau.png"
    "res/data/images/couteau.png"
    "res/data/images/crayon.png"
    "res/data/images/dragon.png"
    "res/data/images/escargot.png"
    "res/data/images/fantome.png"
    "res/data/images/feuille.png"
    "res/data/images/fusee.png"
    "res/data/images/grenouille.png"
    "res/data/images/herisson.png"
    "res/data/images/lapin.png"
    "res/data/images/licorne.png"
    "res/data/images/lit.png"
    "res/data/images/maison.png"
    "res/data/images/marteau.png"
    "res/data/images/moto.png"
    "res/data/images/mouche.png"
    "res/data/images/moulin.jpg"
    "res/data/images/mouton.png"
    "res/data/images/pirate.png"
    "res/data/images/poisson.png"
    "res/data/images/poubelle.png"
    "res/data/images/poule.png"
    "res/data/images/poussin.png"
    "res/data/images/reine.png"
    "res/data/images/roi.png"
    "res/data/images/seau.png"
    "res/data/images/serpent.png"
    "res/data/images/sorciere.png"
    "res/data/images/souris.png"
    "res/data/images/table.png"
    "res/data/images/thermometre.png"
    "res/data/images/tobogan.png"
    "res/data/images/toilettes.png"
    "res/data/images/train.png"
    "res/data/images/vache.png"
    "res/data/images/velo.png"
    "res/data/images/voiture.png"
    "res/data/puzzles/config_activity_sliding_puzzle.json"
    "res/icons/action_add.svg"
    "res/icons/action_edit.svg"
    "res/icons/action_play.svg"
    "res/icons/action_record.svg"
    "res/icons/action_remove.svg"
    "res/icons/anchor.svg"
    "res/icons/back.svg"
    "res/icons/count1.svg"
    "res/icons/count2.svg"
    "res/icons/count3.svg"
    "res/icons/count4.svg"
    "res/icons/count5.svg"
    "res/icons/count6.svg"
    "res/icons/countSyllabes.svg"
    "res/icons/default_child.svg"
    "res/icons/exit.svg"
    "res/icons/eye.svg"
    "res/icons/findIntruder.svg"
    "res/icons/findSyllabes.svg"
    "res/icons/gear.svg"
    "res/icons/help.svg"
    "res/icons/icon.svg"
    "res/icons/listen.svg"
    "res/icons/locked.svg"
    "res/icons/next.svg"
    "res/icons/numbers.svg"
    "res/icons/ok.svg"
    "res/icons/phono.svg"
    "res/icons/puzzle.svg"
    "res/icons/puzzle_sliding.svg"
    "res/icons/reload.svg"
    "res/icons/star.svg"
    "res/icons/starGauge.svg"
    "res/icons/wrong.svg"
    "res/shaders/colorizeFrag.qsb"
    "res/shaders/colorizeVert.qsb"
    "res/shaders/maskSourceFrag.qsb"
)

qt_add_resources(Atalierou "qml"
    PREFIX
        "/"
    FILES
        ${qml_resource_files}
)

install(TARGETS Atalierou
    BUNDLE DESTINATION .
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)

qt_generate_deploy_app_script(
    TARGET Atalierou
    FILENAME_VARIABLE deploy_script
    NO_UNSUPPORTED_PLATFORM_ERROR
)
install(SCRIPT ${deploy_script})
